--- a/Helios/index.html
+++ b/Helios/index.html
@@ -85,11 +85,13 @@
       </div>
       <div class="space"></div>
       <div class="row">
-        <div class="col-md-3 col-sm-6 service"> <i class="fa fa-desktop"></i>
+        <div class="col-md-3 col-sm-6 service"> 
+          <i class="fa fa-desktop"></i>
           <h4>Web Design</h4>
           <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
         </div>
-        <div class="col-md-3 col-sm-6 service"> <i class="fa fa-gears"></i>
+        <div class="col-md-3 col-sm-6 service"> 
+          <i class="fa fa-gears"></i>
           <h4>App Development</h4>
           <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
         </div>
@@ -104,6 +106,7 @@
       </div>
     </div>
   </div>
+
   <!-- Portfolio Section -->
   <div id="works-section">
     <div class="container"> <!-- Container -->
@@ -114,6 +117,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
       </div>
       <div class="categories">
+
         <ul class="cat">
           <li>
             <ol class="type">
@@ -123,31 +127,36 @@
               <li><a href="#" data-filter=".branding">Branding</a></li>
             </ol>
           </li>
-        </ul>
+        </ul>  
         <div class="clearfix"></div>
       </div>
       <div class="row">
         <div class="portfolio-items">
           <div class="col-sm-6 col-md-3 col-lg-3 web">
             <div class="portfolio-item">
-              <div class="hover-bg"> <a href="img/portfolio/01.jpg" rel="prettyPhoto">
+              <div class="hover-bg"> 
+                <a href="img/portfolio/01.jpg" rel="prettyPhoto">
                 <div class="hover-text">
                   <h4>Project Title</h4>
                   <small>Web Design</small>
                   <div class="clearfix"></div>
                 </div>
-                <img src="img/portfolio/01.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <img src="img/portfolio/01.jpg" class="img-responsive" alt="Project Title"> 
+                </a> 
+              </div>
             </div>
           </div>
           <div class="col-sm-6 col-md-3 col-lg-3 app">
             <div class="portfolio-item">
-              <div class="hover-bg"> <a href="img/portfolio/02.jpg" rel="prettyPhoto">
+              <div class="hover-bg"> 
+                <a href="img/portfolio/02.jpg" rel="prettyPhoto">
                 <div class="hover-text">
                   <h4>Project Title</h4>
                   <small>App Development</small>
                   <div class="clearfix"></div>
                 </div>
-                <img src="img/portfolio/02.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <img src="img/portfolio/02.jpg" class="img-responsive" alt="Project Title"> </a> 
+              </div>
             </div>
           </div>
           <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -220,6 +229,7 @@
       </div>
     </div>
   </div>
+
   <!-- About Section -->
   <div id="about-section">
     <div class="container">
@@ -230,7 +240,9 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
       </div>
       <div class="row">
-        <div class="col-md-6"> <img src="img/about.jpg" class="img-responsive"> </div>
+        <div class="col-md-6"> 
+          <img src="img/about.jpg" class="img-responsive"> 
+        </div>
         <div class="col-md-6">
           <div class="about-text">
             <h4>Who We Are</h4>
@@ -244,6 +256,7 @@
       </div>
     </div>
   </div>
+
   <!-- Achievements Section -->
   <div id="achievements" class="section dark-bg">
     <div class="container">
@@ -271,6 +284,7 @@
       </div>
     </div>
   </div>
+
   <!-- Team Section -->
   <div id="team-section" class="text-center">
     <div class="container">
@@ -319,6 +333,7 @@
       </div>
     </div>
   </div>
+
   <!-- Contact Section -->
   <div id="contact-section" class="text-center">
     <div class="container">
@@ -369,7 +384,7 @@
       </div>
     </div>
   </div>
-  </div>
+
   <div id="social-section">
     <div class="container">
       <div class="social">
@@ -384,6 +399,7 @@
       </div>
     </div>
   </div>
+
   <div id="footer">
     <div class="container">
       <div class="fnav">
@@ -391,7 +407,7 @@
       </div>
     </div>
   </div>
-
+<!-- Scripts -->
 <div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
