--- a/projeto/index.html
+++ b/projeto/index.html
@@ -39,7 +39,7 @@
           			<span class="icon-bar"></span> 
 				</button>
 				<a href="index.html" class="navbar-brand">
-					<i class="fa fa-sun-o">Foco</i><strong></strong>
+					<i class="fa fa-home"> Foco</i><strong></strong>
 				</a>				
 			</div>
 
@@ -59,7 +59,6 @@
 	</nav>
 
 	<!-- Home -->
-	<!-- Cabeçalho(Header) -->
 	<header class="text-center" name="home">
 		<div class="intro-text">
 			<h1>Bem vindo à <strong>Foco</strong></h1>
@@ -69,46 +68,376 @@
 	</header>
 
 	<!-- Serviços -->
+	<div id="services-section" class="text-center">
+		<div class="container">
+			<div class="section-title center">
+				<h2>Nossos Serviços</h2>
+				<hr>
+				<div class="clearfix"></div>
+				<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus. Eleifend pellentesque natoque faucibus magna ut etiam.</p>
+			</div>
+			<div class="space"></div>
+			<div class="row">
+				<div class="col-md-3 col-sm-6 service">
+					<i class="fa fa-desktop"></i>
+					<h4>Web Design</h4>
+					<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+				</div>
+				<div class="col-md-3 col-sm-6 service">
+					<i class="fa fa-gears"></i>
+					<h4>App Development</h4>
+					<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
+				</div>
+				<div class="col-md-3 col-sm-6 service"> 
+					<i class="fa fa-rocket"></i>
+		          	<h4>Branding</h4>
+		          	<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
+		        </div>
+		        <div class="col-md-3 col-sm-6 service"> 
+		        	<i class="fa fa-line-chart"></i>
+		          	<h4>Marketing</h4>
+		          	<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
+		        </div>
+			</div>
+		</div>
+	</div>
 
+	<!-- Trabalhos -->
+	<div id="works-section">
+		<div class="container">
+			<div class="section-title text-center center">
+				<h2>Nossos Trabalhos</h2>
+				<hr>
+				<div class="clearfix"></div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+			</div>
+			<div class="categories">
+				<ul class="cat">
+					<li>
+						<ol class="type">
+							<li><a href="#" data-filter="" class="active">All</a></li>					
+							<li><a href="#" data-filter=".web">Web Design</a></li>
+							<li><a href="#" data-filter=".app">App Development</a></li>
+							<li><a href="#" data-filter=".branding">Branding</a></li>	
+						</ol>
+					</li>
+				</ul>
+				<div class="clearfix"></div>
+			</div>
+			<div class="row">
+				<div class="portfolio-items">
 
+					<div class="col-sm-6 col-md-3 col-lg-3 web">
+						<div class="portfolio-item">
+							<div class="hover-bg">
+								<a href="img/portfolio/01.jpg" rel="prettyPhoto">
+									<div class="hover-text">
+										<h4>Project Title</h4>
+										<small>Web Design</small>
+										<div class="clearfix"></div>
+									</div>
+									<img src="img/portfolio/01.jpg" class="img-responsive" alt="Project Title">
+								</a>
+							</div>
+						</div>
+					</div>
 
+					<div class="col-sm-6 col-md-3 col-lg-3 app">
+						<div class="portfolio-item">
+							<div class="hover-bg">
+								<a href="img/portfolio/02.jpg" rel="prettyPhoto">
+									<div class="hover-text">
+										<h4>Project Title</h4>
+										<small>App Development</small>
+										<div class="clearfix"></div>
+									</div>
+									<img src="img/portfolio/02.jpg" class="img-responsive" alt="Project Title">
+								</a>
+							</div>
+						</div>
+					</div>
 
+					<div class="col-sm-6 col-md-3 col-lg-3 web">
+						<div class="portfolio-item">
+							<div class="hover-bg">
+								<a href="img/portfolio/03.jpg" rel="prettyPhoto">
+									<div class="hover-text">
+										<h4>Project Title</h4>
+										<small>Web Design</small>
+										<div class="clearfix"></div>
+									</div>
+									<img src="img/portfolio/03.jpg" class="img-responsive" alt="Project Title">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3 col-lg-3 web">
+						<div class="portfolio-item">
+							<div class="hover-bg">
+								<a href="img/portfolio/04.jpg" rel="prettyPhoto">
+									<div class="hover-text">
+										<h4>Project Title</h4>
+										<small>Web Design</small>
+										<div class="clearfix"></div>
+									</div>
+									<img src="img/portfolio/04.jpg" class="img-responsive" alt="Project Title">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3 col-lg-3 app">
+						<div class="portfolio-item">
+							<div class="hover-bg">
+								<a href="img/portfolio/05.jpg" rel="prettyPhoto">
+									<div class="hover-text">
+										<h4>Project Title</h4>
+										<small>App Development</small>
+										<div class="clearfix"></div>
+									</div>
+									<img src="img/portfolio/05.jpg" class="img-responsive" alt="Project Title">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3 col-lg-3 branding">
+						<div class="portfolio-item">
+							<div class="hover-bg">
+								<a href="img/portfolio/06.jpg" rel="prettyPhoto">
+									<div class="hover-text">
+										<h4>Project Title</h4>
+										<small>Branding</small>
+										<div class="clearfix"></div>
+									</div>
+									<img src="img/portfolio/06.jpg" class="img-responsive" alt="Project Title">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3 col-lg-3 branding app">
+						<div class="portfolio-item">
+							<div class="hover-bg">
+								<a href="img/portfolio/07.jpg" rel="prettyPhoto">
+									<div class="hover-text">
+										<h4>Project Title</h4>
+										<small>App Development, Branding</small>
+										<div class="clearfix"></div>
+									</div>
+									<img src="img/portfolio/07.jpg" class="img-responsive" alt="Project Title">
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3 col-lg-3 web">
+						<div class="portfolio-item">
+							<div class="hover-bg">
+								<a href="img/portfolio/08.jpg" rel="prettyPhoto">
+									<div class="hover-text">
+										<h4>Project Title</h4>
+										<small>Web Design</small>
+										<div class="clearfix"></div>
+									</div>
+									<img src="img/portfolio/08.jpg" class="img-responsive" alt="Project Title">
+								</a>
+							</div>
+						</div>
+					</div>
 
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<!-- Sobre Nós -->
+	<div id="about-section">
+		<div class="container">
+			<div class="section-title text-center center">
+				<h2>Sobre Nós</h2>
+				<hr>
+				<div class="clearfix"></div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<img src="img/about.jpg" class="img-responsive">
+				</div>
+				<div class="col-md-6">
+					<div class="about-text">
+						<h4>Quem somos</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh ante facilisis bibendum.</p>
+						<h4>O que fazemos</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibh ante facilisis bibendum.</p>
+						<h4>Por que escolher a gente</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante facilisis bibendum dolor feugiat at.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<!-- Realizações -->
+	<div id="achievements" class="section dark-bg">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3 col-sm-3">
+					<div class="achievement-box">
+						<span class="count">210</span>
+						<h4>Clientes satisfeitos</h4>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-3">
+		          	<div class="achievement-box"> 
+		          		<span class="count">9,500</span>
+		            	<h4>Horas Trabalhadas</h4>
+			        </div>
+			    </div>
+			    <div class="col-md-3 col-sm-3">
+			        <div class="achievement-box"> 
+			        	<span class="count">590</span>
+			            <h4>Projetos Concluídos</h4>
+			        </div>
+			    </div>
+			    <div class="col-md-3 col-sm-3">
+			        <div class="achievement-box"> 
+			        	<span class="count">14</span>
+		            	<h4>Prêmios Ganhos</h4>
+		          	</div>
+		        </div>
+			</div>
+		</div>
+	</div>
 
+	<!-- Time -->
+	<div id="team-section" class="text-center">
+		<div class="container">
+			<div class="section-title center">
+				<h2>Conheça o Time</h2>
+				<hr>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+			</div>
+			<div id="row">
+				<div class="col-md-3 col-sm-6 team">
+					<div class="thumbnail">
+						<img src="img/team/01.jpg" alt="..." class="img-circle team-img">
+						<div class="caption">
+							<h3>John Doe</h3>
+              				<p>Founder / CEO</p>
+              				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>						
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6 team">
+					<div class="thumbnail">
+						<img src="img/team/02.jpg" alt="..." class="img-circle team-img">
+						<div class="caption">
+							<h3>Mike Doe</h3>
+				            <p>Web Designer</p>
+				            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>						
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6 team">
+					<div class="thumbnail">
+						<img src="img/team/03.jpg" alt="..." class="img-circle team-img">
+						<div class="caption">
+							<h3>Jane Doe</h3>
+				            <p>Creative Director</p>
+				            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6 team">
+					<div class="thumbnail">
+						<img src="img/team/04.jpg" alt="..." class="img-circle team-img">
+						<div class="caption">
+							<h3>Larry Show</h3>
+              				<p>Project Manager</p>
+              				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
+	<!-- Fale conosco -->
+	<div id="contact-section" class="text-center">
+		<div class="container">
+			<div class="section-title center">
+				<h2>Fale Conosco</h2>
+				<hr>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+			</div>
+			<div class="col-md-8 col-md-offset-2">
+				<div class="col-md-4">
+					<i class="fa fa-map-marker"></i>
+					<p>4321 California St,<br>
+            		San Francisco, CA 12345</p>
+				</div>
+				<div class="col-md-4">
+					<i class="fa fa-envelope-o"></i>
+					<p>info@company.com</p>
+				</div>
+				<div class="col-md-4">
+					<i class="fa fa-phone"></i>
+					<p>+1 123 456 1234</p>
+				</div>
+				<br>
+				<br>
+				<div class="clearfix"></div>
+			</div>
+			<div class="col-md-8 col-md-offset-2">
+				<h3>Deixe uma Mensagem</h3>
+				<form name="sentMessage" id="contactForm" novalidate>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								<input type="text" id="name" class="form-control" placeholder="Name" required="required">
+								<p class="help-block text-danger"></p>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<input type="email" id="email" class="form-control" placeholder="Email" required="required">
+								<p class="help-block text-danger"></p>
+							</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required="required"></textarea>
+						<p class="help-block text-danger"></p>
+					</div>
+					<div id="success"></div>
+					<button type="submit" class="btn btn-default"> Enviar Mensagem</button>
+				</form>
+			</div>
+		</div>
+	</div>
 
+	<!-- Rodapé -->
+	<footer>
+		<div id="social-section">
+			<div class="container">
+				<div class="social">
+					<ul>
+						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+				        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+				        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+				        <li><a href="#"><i class="fa fa-github"></i></a></li>
+				        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+				        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+		<div id="footer">
+			<div class="container">
+				<div class="fnav">
+					<p>Copyright &copy; Foco. Designed by <a href="https://github.com/rsaless" target="_blank">Rafael</a></p>
+				</div>	
+			</div>
+		</div>
+	</footer>
 
 	<!-- Scripts de pós-carregamento -->
 	<div id="Scripts">
