--- a/projeto/index.html
+++ b/projeto/index.html
@@ -16,7 +16,8 @@
   	<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
 
   	<!-- CSS/Stylesheet -->
-  	<link rel="stylesheet" type="text/css" href="css/style.css">
+  	<link rel="stylesheet" type="text/css" href="css/style.css"> 
+  	<!-- <link rel="stylesheet" type="text/css" href="../Helios/css/style.css"> -->
   	<link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
 
   	<!-- APIs Google/ CSS -->
@@ -32,14 +33,8 @@
 	<nav id="menu" class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span> 
-          			<span class="icon-bar"></span> 
-          			<span class="icon-bar"></span> 
-          			<span class="icon-bar"></span> 
-				</button>
 				<a href="index.html" class="navbar-brand">
-					<i class="fa fa-home"> Foco</i><strong></strong>
+					<i class="fa fa-home"></i> <strong>Foco</strong>
 				</a>				
 			</div>
 
@@ -433,7 +428,7 @@
 		<div id="footer">
 			<div class="container">
 				<div class="fnav">
-					<p>Copyright &copy; Foco. Designed by <a href="https://github.com/rsaless" target="_blank">Rafael</a></p>
+					<p>Copyright &copy; Foco. Designed by <a href="https://github.com/rsaless" target="_blank">Rafael Pavarina</a></p>
 				</div>	
 			</div>
 		</div>
