Projeto quase terminado
* correções feitas
* dados inseridos
 Projeto quase terminado

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-	<!-- Menu -->
+	<!-- Menu --><!-- OK -->
 	<nav id="menu" class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
@@ -45,11 +45,11 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#home" class="page-scroll">Home</a></li>
-					<li><a href="#services-section" class="page-scroll">Serviços</a></li>
-					<li><a href="#works-section" class="page-scroll">Trabalhos</a></li>
 					<li><a href="#about-section" class="page-scroll">Sobre nós</a></li>
+					<li><a href="#services-section" class="page-scroll">Serviços</a></li>
 					<li><a href="#team-section" class="page-scroll">Time</a></li>
 					<li><a href="#contact-section" class="page-scroll">Fale conosco</a></li>
+					<li><a href="#work-with" class="page-scroll">Trabalhe com a gente</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse --> 
@@ -57,196 +57,16 @@
 		<!-- /.container-fluid --> 
 	</nav>
 
-	<!-- Home -->
+	<!-- Home --><!-- Mudar o plano de fundo -->
 	<header class="text-center" name="home">
 		<div class="intro-text">
 			<h1>Bem vindo à <strong>Foco</strong></h1>
 			<p><strong>Sistemas Foco</strong>, consultoria especializada em soluções de TI, <br> com profissionais de experiência no segmento de sistemas, <br> traz inovações e modernidades em suas aplicações</p>
-			<a href="#services-section" class="btn btn-default btn-lg page-scroll">VEJA MAIS</a>
+			<a href="#about-section" class="btn btn-default btn-lg page-scroll">VEJA MAIS</a>
 		</div>
 	</header>
 
-	<!-- Serviços -->
-	<div id="services-section" class="text-center">
-		<div class="container">
-			<div class="section-title center">
-				<h2>Nossos Serviços</h2>
-				<hr>
-				<div class="clearfix"></div>
-				<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus. Eleifend pellentesque natoque faucibus magna ut etiam.</p>
-			</div>
-			<div class="space"></div>
-			<div class="row">
-				<div class="col-md-3 col-sm-6 service">
-					<i class="fa fa-desktop"></i>
-					<h4>Web Design</h4>
-					<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-				</div>
-				<div class="col-md-3 col-sm-6 service">
-					<i class="fa fa-gears"></i>
-					<h4>App Development</h4>
-					<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
-				</div>
-				<div class="col-md-3 col-sm-6 service"> 
-					<i class="fa fa-rocket"></i>
-		          	<h4>Branding</h4>
-		          	<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-		        </div>
-		        <div class="col-md-3 col-sm-6 service"> 
-		        	<i class="fa fa-line-chart"></i>
-		          	<h4>Marketing</h4>
-		          	<p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
-		        </div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Trabalhos -->
-	<div id="works-section">
-		<div class="container">
-			<div class="section-title text-center center">
-				<h2>Nossos Trabalhos</h2>
-				<hr>
-				<div class="clearfix"></div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
-			</div>
-			<div class="categories">
-				<ul class="cat">
-					<li>
-						<ol class="type">
-							<li><a href="#" data-filter="" class="active">Todos</a></li>					
-							<li><a href="#" data-filter=".web">Web Design</a></li>
-							<li><a href="#" data-filter=".app">App Development</a></li>
-							<li><a href="#" data-filter=".branding">Branding</a></li>	
-						</ol>
-					</li>
-				</ul>
-				<div class="clearfix"></div>
-			</div>
-			<div class="row">
-				<div class="portfolio-items">
-
-					<div class="col-sm-6 col-md-3 col-lg-3 web">
-						<div class="portfolio-item">
-							<div class="hover-bg">
-								<a href="img/portfolio/01.jpg" rel="prettyPhoto">
-									<div class="hover-text">
-										<h4>Project Title</h4>
-										<small>Web Design</small>
-										<div class="clearfix"></div>
-									</div>
-									<img src="img/portfolio/01.jpg" class="img-responsive" alt="Project Title">
-								</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-sm-6 col-md-3 col-lg-3 app">
-						<div class="portfolio-item">
-							<div class="hover-bg">
-								<a href="img/portfolio/02.jpg" rel="prettyPhoto">
-									<div class="hover-text">
-										<h4>Project Title</h4>
-										<small>App Development</small>
-										<div class="clearfix"></div>
-									</div>
-									<img src="img/portfolio/02.jpg" class="img-responsive" alt="Project Title">
-								</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-sm-6 col-md-3 col-lg-3 web">
-						<div class="portfolio-item">
-							<div class="hover-bg">
-								<a href="img/portfolio/03.jpg" rel="prettyPhoto">
-									<div class="hover-text">
-										<h4>Project Title</h4>
-										<small>Web Design</small>
-										<div class="clearfix"></div>
-									</div>
-									<img src="img/portfolio/03.jpg" class="img-responsive" alt="Project Title">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 col-lg-3 web">
-						<div class="portfolio-item">
-							<div class="hover-bg">
-								<a href="img/portfolio/04.jpg" rel="prettyPhoto">
-									<div class="hover-text">
-										<h4>Project Title</h4>
-										<small>Web Design</small>
-										<div class="clearfix"></div>
-									</div>
-									<img src="img/portfolio/04.jpg" class="img-responsive" alt="Project Title">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 col-lg-3 app">
-						<div class="portfolio-item">
-							<div class="hover-bg">
-								<a href="img/portfolio/05.jpg" rel="prettyPhoto">
-									<div class="hover-text">
-										<h4>Project Title</h4>
-										<small>App Development</small>
-										<div class="clearfix"></div>
-									</div>
-									<img src="img/portfolio/05.jpg" class="img-responsive" alt="Project Title">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 col-lg-3 branding">
-						<div class="portfolio-item">
-							<div class="hover-bg">
-								<a href="img/portfolio/06.jpg" rel="prettyPhoto">
-									<div class="hover-text">
-										<h4>Project Title</h4>
-										<small>Branding</small>
-										<div class="clearfix"></div>
-									</div>
-									<img src="img/portfolio/06.jpg" class="img-responsive" alt="Project Title">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 col-lg-3 branding app">
-						<div class="portfolio-item">
-							<div class="hover-bg">
-								<a href="img/portfolio/07.jpg" rel="prettyPhoto">
-									<div class="hover-text">
-										<h4>Project Title</h4>
-										<small>App Development, Branding</small>
-										<div class="clearfix"></div>
-									</div>
-									<img src="img/portfolio/07.jpg" class="img-responsive" alt="Project Title">
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-3 col-lg-3 web">
-						<div class="portfolio-item">
-							<div class="hover-bg">
-								<a href="img/portfolio/08.jpg" rel="prettyPhoto">
-									<div class="hover-text">
-										<h4>Project Title</h4>
-										<small>Web Design</small>
-										<div class="clearfix"></div>
-									</div>
-									<img src="img/portfolio/08.jpg" class="img-responsive" alt="Project Title">
-								</a>
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Sobre Nós -->
+	<!-- Sobre Nós --><!-- Mudar a imagem lateral -->
 	<div id="about-section">
 		<div class="container">
 			<div class="section-title text-center center">
@@ -267,56 +87,59 @@
 						<h4>Nossa Visão</h4>
 						<p>Ser uma empresa parceira de nossos clientes, para que juntos possamos colher resultados.</p>
 						<h4>Nossos Valores</h4>
-						<p><strong>Alto padrão de integridade:</strong> Como já afirmado em nossa visão, para sermos parceiros necessitamos agir de forma ética, correta, assumindo nossos erros e, mais que isso, sempre fornecer um tratamento diferenciado para alcançar a satisfação dos nossos clientes, pois sabemos que esta é que gera a perenidade. Nós somos honestos e éticos em todas as nossas negociações.</p>
-						<p><strong>Garantia de confidencialidade:</strong> Garantimos a total confidencialidade das informações dos nossos clientes e dos nossos potenciais clientes.</p>
-						<p><strong>Transparência:</strong> Sempre perseguimos incansavelmente a missão de sermos uma empresa geradora de valor no segmento de TI, com produtos modernos e seguros.</p>
-						<p><strong>Pessoas comprometidas:</strong> Nossa dedicação e compromisso com nossos valores fazem com que nossos clientes saibam que podem contar conosco para fornecer serviços superiores, que os ajudem a alcançar seus objetivos empresariais.</p>
-						<p><strong>Dedicação:</strong> Fazemos a diferença e competimos intensamente para vencer, mas sempre respeitando preceitos e valores éticos. É esta, e somente esta, a vitória que nos interessa!</p>
+						<p><strong class="str-or">Alto padrão de integridade:</strong> Como já afirmado em nossa visão, para sermos parceiros necessitamos agir de forma ética, correta, assumindo nossos erros e, mais que isso, sempre fornecer um tratamento diferenciado para alcançar a satisfação dos nossos clientes, pois sabemos que esta é que gera a perenidade. Nós somos honestos e éticos em todas as nossas negociações.</p>
+						<p><strong class="str-or">Garantia de confidencialidade:</strong> Garantimos a total confidencialidade das informações dos nossos clientes e dos nossos potenciais clientes.</p>
+						<p><strong class="str-or">Transparência:</strong> Sempre perseguimos incansavelmente a missão de sermos uma empresa geradora de valor no segmento de TI, com produtos modernos e seguros.</p>
+						<p><strong class="str-or">Pessoas comprometidas:</strong> Nossa dedicação e compromisso com nossos valores fazem com que nossos clientes saibam que podem contar conosco para fornecer serviços superiores, que os ajudem a alcançar seus objetivos empresariais.</p>
+						<p><strong class="str-or">Dedicação:</strong> Fazemos a diferença e competimos intensamente para vencer, mas sempre respeitando preceitos e valores éticos. É esta, e somente esta, a vitória que nos interessa!</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<!-- Realizações -->
-	<div id="achievements" class="section dark-bg">
+	<!-- Serviços --><!-- OK -->
+	<div id="services-section" class="text-center">
 		<div class="container">
+			<div class="section-title center">
+				<h2>Nossos Serviços</h2>
+				<hr>
+				<div class="clearfix"></div>
+				<p>Os seguintes serviços podem ser realizados pela nossa empresa:</p>
+			</div>
+			<div class="space"></div>
 			<div class="row">
-				<div class="col-md-3 col-sm-3">
-					<div class="achievement-box">
-						<span class="count">210</span>
-						<h4>Clientes satisfeitos</h4>
-					</div>
+				<div class="col-md-3 col-sm-6 service">
+					<i class="fa fa-desktop"></i>
+					<h4>Desenvolvimento Desktop</h4>
+					<p class="p-service">Desenvolvimento de aplicações desktop.</p>
 				</div>
-				<div class="col-md-3 col-sm-3">
-		          	<div class="achievement-box"> 
-		          		<span class="count">9,500</span>
-		            	<h4>Horas Trabalhadas</h4>
-			        </div>
-			    </div>
-			    <div class="col-md-3 col-sm-3">
-			        <div class="achievement-box"> 
-			        	<span class="count">590</span>
-			            <h4>Projetos Concluídos</h4>
-			        </div>
-			    </div>
-			    <div class="col-md-3 col-sm-3">
-			        <div class="achievement-box"> 
-			        	<span class="count">14</span>
-		            	<h4>Prêmios Ganhos</h4>
-		          	</div>
+				<div class="col-md-3 col-sm-6 service">
+					<i class="fa fa-mobile-phone fa-3x"></i>
+					<h4>Desenvolvimento Mobile</h4>
+					<p class="p-service">Desenvolvimento de aplicações para dispositivos móveis.</p>
+				</div>
+				<div class="col-md-3 col-sm-6 service"> 
+					<i class="fa fa-database"></i>
+		          	<h4>Banco de dados</h4>
+		          	<p class="p-service">Desenvolvimento e manutenção de aplicações com bancos de dados.</p>
+		        </div>
+		        <div class="col-md-3 col-sm-6 service"> 
+		        	<i class="fa fa-line-chart"></i>
+		          	<h4>Desenvolvimento de sistemas de vendas</h4>
+		          	<p class="p-service">Desenvolvimento de aplicações empresariais para vendas</p>
 		        </div>
 			</div>
 		</div>
 	</div>
 
-	<!-- Time -->
+	<!-- Time --><!-- Alterar dados da equipe -->
 	<div id="team-section" class="text-center">
 		<div class="container">
 			<div class="section-title center">
 				<h2>Conheça o Time</h2>
 				<hr>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+				<p>Conheça nossa equipe:</p>
 			</div>
 			<div id="row">
 				<div class="col-md-3 col-sm-6 team">
@@ -324,8 +147,8 @@
 						<img src="img/team/01.jpg" alt="..." class="img-circle team-img">
 						<div class="caption">
 							<h3>Cesar Pavarina</h3>
-              				<p>Fundador / CEO</p>
-              				<p>cesar@sistemasfoco.com.br</p>			
+              				<p class="p-job">Fundador / CEO</p>
+              				<p class="p-email">cesar@sistemasfoco.com.br</p>			
 						</div>
 					</div>
 				</div>
@@ -334,8 +157,8 @@
 						<img src="img/team/02.jpg" alt="..." class="img-circle team-img">
 						<div class="caption">
 							<h3>Rafael Pavarina</h3>
-				            <p>Web Designer</p>
-				            <p>rafael@sistemasfoco.com.br</p>			
+				            <p class="p-job">Web Designer</p>
+				            <p class="p-email">rafael@sistemasfoco.com.br</p>			
 						</div>
 					</div>
 				</div>
@@ -344,8 +167,8 @@
 						<img src="img/team/03.jpg" alt="..." class="img-circle team-img">
 						<div class="caption">
 							<h3>Maria</h3>
-				            <p>Creative Director</p>
-				            <p>maria@sistemasfoco.com.br.</p>
+				            <p class="p-job">Creative Director</p>
+				            <p class="p-email">maria@sistemasfoco.com.br</p>
 						</div>
 					</div>
 				</div>
@@ -354,8 +177,8 @@
 						<img src="img/team/04.jpg" alt="..." class="img-circle team-img">
 						<div class="caption">
 							<h3>Pedro</h3>
-              				<p>Project Manager</p>
-              				<p>pedro@sistemasfoco.com.br</p>
+              				<p class="p-job">Project Manager</p>
+              				<p class="p-email">pedro@sistemasfoco.com.br</p>
 						</div>
 					</div>
 				</div>
@@ -363,7 +186,7 @@
 		</div>
 	</div>
 
-	<!-- Fale conosco -->
+	<!-- Fale conosco --><!-- Alterar email de destino e verificar dados-->
 	<div id="contact-section" class="text-center">
 		<div class="container">
 			<div class="section-title center">
@@ -378,8 +201,8 @@
 			<div class="col-md-8 col-md-offset-2">
 				<div class="col-md-4">
 					<i class="fa fa-map-marker"></i>
-					<p>Av. Engenheiro Alberto MAricaro, 69<br>
-            		Araraquara, SP, 14801-086</p>
+					<p>Av. Engenheiro Alberto Maricato, 69<br>
+            		Araraquara, SP. 14801-086</p>
 				</div>
 				<div class="col-md-4">
 					<i class="fa fa-envelope-o"></i>
@@ -399,7 +222,7 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="form-group">
-								<input type="text" id="name" class="form-control" placeholder="Name" required="required">
+								<input type="text" id="name" class="form-control" placeholder="Nome" required="required">
 								<p class="help-block text-danger"></p>
 							</div>
 						</div>
@@ -411,7 +234,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required="required"></textarea>
+						<textarea name="message" id="message" class="form-control" rows="4" placeholder="Mensagem" required="required"></textarea>
 						<p class="help-block text-danger"></p>
 					</div>
 					<div id="success"></div>
@@ -421,16 +244,30 @@
 		</div>
 	</div>
 
-	<!-- Rodapé -->
+	<!-- Trabalhe conosco --><!-- OK -->
+	<div id="work-with" class="text-center">
+		<div class="container">
+			<div class="section-title center">
+				<h2>Trabalhe com a gente</h2>
+				<hr>
+				<div class="clearfix"></div>
+				<p>Bem vindo ao site da Sistemas Foco, uma empresa de software no segmento de automação comercial do interior de São Paulo.<br>
+				Estamos trabalhando para crescer e se destacar nesta área e para que isto aconteça precisamos da sua dedicação e força de vontade.<br><br>
+				Interessado? Envie-nos seu currículo para o e-mail: <em class="em-blue">contato@sistemasfoco.com.br</em></p>
+			</div>
+		</div>
+	</div>
+
+	<!-- Rodapé --><!-- OK -->
 	<footer>
 		<div id="social-section">
 			<div class="container">
 				<div class="social">
 					<ul>
-						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-				        <li><a href="#"><i class="fa fa-github"></i></a></li>
-				        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-				        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="https://www.facebook.com/sistemasfoco/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+				        <li><a href="https://www.instagram.com/sistemasfoco/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+				        <li><a href="https://github.com/rsaless" target="_blank"><i class="fa fa-github"></i></a></li>
+				        <li><a href="https://www.linkedin.com/in/rafael-sales-pavarina/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 					</ul>
 				</div>
 			</div>
@@ -439,13 +276,13 @@
 		<div id="footer">
 			<div class="container">
 				<div class="fnav">
-					<p>Copyright &copy; Foco. Designed by <a href="https://github.com/rsaless" target="_blank">Rafael Pavarina</a></p>
+					<p>Copyright <strong class="str-or">&copy;</strong> Foco. Designed by <a href="https://github.com/rsaless" target="_blank">Rafael Pavarina</a></p>
 				</div>	
 			</div>
 		</div>
 	</footer>
 
-	<!-- Scripts de pós-carregamento -->
+	<!-- Scripts de pós-carregamento --><!-- OK -->
 	<div id="Scripts">
 		<!-- jQuery // necessário para plugins de javascript e bootstrap -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
